cmd/webui/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: interlink-webui
  namespace: interlink-webui
  labels:
    app.kubernetes.io/name: interlink-webui
    app.kubernetes.io/component: web-interface
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: interlink-webui
